corrige erros e acrescenta links para o github dos autores do trabalho

--- a/projetos/analise_exploratoria_dados_financeiros/analise.ipynb
+++ b/projetos/analise_exploratoria_dados_financeiros/analise.ipynb
@@ -12,9 +12,12 @@
         "\n",
         "Nomes: \n",
         " * Carlos Magno\n",
-        " * Danrley Lima\n",
-        " * Elizabeth Oliveira\n",
-        " * Mateus Paranhos\n",
+        " * [Danrley Lima](https://github.com/Danrley-Lima)\n",
+        " * [Elizabeth Oliveira](https://github.com/Liz03Oliver)\n",
+        " * [Mateus Paranhos](https://github.com/mateusparanhos)\n",
+        "\n",
+        "\n",
+        "[**Link para o notebook original**](https://github.com/Liz03Oliver/analise_exploratoria_dados_financeiros)\n",
         "\n",
         "Turma:Diversidade 892"
       ]
@@ -38,6 +41,8 @@
       "outputs": [],
       "source": [
         "# Importa as bibliotecas utilizadas\n",
+        "\n",
+        "import os\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -4623,7 +4628,7 @@
             "Ativo06: 88950651.25000001\n",
             "Ativo07: 19379032.72\n",
             "CPU times: total: 0 ns\n",
-            "Wall time: 2.48 ms\n"
+            "Wall time: 3.87 ms\n"
           ]
         }
       ],
@@ -4668,7 +4673,7 @@
           "output_type": "stream",
           "text": [
             "CPU times: total: 15.6 ms\n",
-            "Wall time: 19.6 ms\n"
+            "Wall time: 23.6 ms\n"
           ]
         },
         {
